[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/ui/commons/pause_menu/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://game/ui/commons/fonts/caslonantique.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/escoria-core/logo/escoria-logo-small.png" type="Texture" id=3]
[ext_resource path="res://game/ui/commons/save/save_game.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/ui/commons/load/load_game.tscn" type="PackedScene" id=5]

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 332.0
margin_top = 151.0
margin_right = 948.0
margin_bottom = 748.0
custom_constants/separation = 100

[node name="TextureRect" type="TextureRect" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 616.0
margin_bottom = 236.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuitems" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 616.0
margin_bottom = 597.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="Panel/CenterContainer/VBoxContainer/menuitems"]
margin_right = 616.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "CONTINUE_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_game" type="Button" parent="Panel/CenterContainer/VBoxContainer/menuitems"]
margin_top = 160.0
margin_right = 616.0
margin_bottom = 187.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "SAVE_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_game" type="Button" parent="Panel/CenterContainer/VBoxContainer/menuitems"]
margin_top = 197.0
margin_right = 616.0
margin_bottom = 224.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "LOAD_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Panel/CenterContainer/VBoxContainer/menuitems"]
margin_top = 234.0
margin_right = 616.0
margin_bottom = 261.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_game" parent="." instance=ExtResource( 4 )]
visible = false

[node name="load_game" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/menuitems/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/menuitems/save_game" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/menuitems/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/menuitems/quit" to="." method="_on_quit_pressed"]
[connection signal="back_button_pressed" from="save_game" to="." method="_on_save_game_back_button_pressed"]
[connection signal="back_button_pressed" from="load_game" to="." method="_on_load_game_back_button_pressed"]
